# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.449 2005/12/09 22:38:43 wolf31o2 Exp $

  09 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Swapped -v/-V since I had gotten them wrong here.

  09 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix stupid overlay bug

  09 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-chroot.sh, targets/netboot/netboot-combine.sh,
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage4/stage4-chroot.sh, targets/support/chroot-functions.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh,
  targets/support/unmerge.sh:
  Made sure we use -f on removing the default links for splash. Removed
  check_portage_version as it really isn't needed anymore. Removed
  --no-install from genkernel commands in kmerge.sh so users must manually
  remove kernels from /boot. This is 2.0_rc8.

  09 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Made sed on devfsd.conf conditional on it existing. Removes one more error
  message from a standard catalyst run.

  09 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> files/catalyst.conf:
  Added warning about breaking snapshot cache and re-enable autoresume, since
  the errors I was getting were elsewhere.

  09 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix indentation error the last commit caused

  09 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Always clear autoresume points after a successful run

  09 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Changed mv -f in livecdfs-update.sh to a cp -r, as it was seriously breaking